--- a/src/resources/postcss/tribe-common-admin/settings/_form.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_form.pcss
@@ -23,6 +23,7 @@
 	}
 
 	#tec-settings-form {
+		align-items: start;
 		border: none;
 		border-radius: 0;
 		border-top: 1px solid var(--tec-admin-core-grey-10);
@@ -49,7 +50,7 @@
 				padding: 0;
 			}
 
-			> *:not(.tec_settings__footer):not(.tec_settings__header-block) {
+			> *:not(.tec_settings__footer):not(.tec_settings__header-block):not(.tribe-admin-box-left) {
 				padding-right: var(--tec-spacer-settings-form-right-gap);
 			}
 		}
